force-app/main/default/objects/A1__c/A1__c.object-meta.xml
<CustomObject>
    <label>A1</label>
    <nameField>
        <label>A1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>