force-app/main/default/objects/A1__c/fields/Signal__c.field-meta.xml
<CustomField>
    <fullName>Signal__c</fullName>
    <formula>IF( ISPICKVAL(Traffic_light__c , &apos;low&apos;), IMAGE(&quot;/resource/green&quot;, &quot;Green&quot;,44,44),
IF ( ISPICKVAL(Traffic_light__c , &apos;medium&apos;), IMAGE(&quot;/resource/yellow&quot;, &quot;Yellow&quot;,44,44),
IMAGE(&quot;/resource/red&quot;, &quot;Red&quot;,44,44)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signal</label>
    <type>Text</type>
</CustomField>