force-app/main/default/objects/A1__c/fields/Text40__c.field-meta.xml
<CustomField>
    <fullName>Text40__c</fullName>
    <label>Text40</label>
    <length>4</length>
    <type>Text</type>
</CustomField>