force-app/main/default/objects/A1__c/fields/text50__c.field-meta.xml
<CustomField>
    <fullName>text50__c</fullName>
    <label>text50</label>
    <length>33</length>
    <type>Text</type>
</CustomField>