force-app/main/default/objects/A1__c/fields/text60__c.field-meta.xml
<CustomField>
    <fullName>text60__c</fullName>
    <label>text60</label>
    <length>33</length>
    <type>Text</type>
</CustomField>