force-app/main/default/objects/A1__c/fields/text_1__c.field-meta.xml
<CustomField>
    <fullName>text_1__c</fullName>
    <label>text 1</label>
    <length>33</length>
    <type>Text</type>
</CustomField>