force-app/main/default/objects/A1__c/fields/text_3__c.field-meta.xml
<CustomField>
    <fullName>text_3__c</fullName>
    <label>text 3</label>
    <length>33</length>
    <type>Text</type>
</CustomField>