force-app/main/default/objects/A1__c/fields/Traffic_light__c.field-meta.xml
<CustomField>
    <fullName>Traffic_light__c</fullName>
    <label>Traffic light</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>